adding connection to database with feature of registration of user

--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -18,7 +18,8 @@
                     <input type="text" name="usr_email" required /> <i>Почта</i>
                     <input type="submit" value="Войти" />
                 </form>
-                <div class="links"> <a href="#">Забыли почту?</a> <a href="#">Зарегистрироваться</a>
+                <div class="links"> <a href="#">Забыли почту?</a> <a
+                        href="{{ url_for('sign_up') }}">Зарегистрироваться</a>
                 </div>
             </div>
         </div>
